# wellnr-commons

./: .gitignore  CHANGELOG.md  README.md  license-header.txt  pom.xml  pyproject.toml  settings.xml
.github/workflows/: dev-release.yml  release.yml
src/main/java/com/wellnr/: Main.java
src/main/java/com/wellnr/commons/: CollectionOperators.java  FileOperators.java  Operators.java  ReflectionOperators.java  StringOperators.java
src/main/java/com/wellnr/commons/exceptions/: DomainException.java
src/main/java/com/wellnr/commons/functions/: Function0.java  Function1.java  Function10.java  Function11.java  Function2.java  Function3.java  Function4.java  Function5.java  Function6.java  Function7.java  Function8.java  Function9.java  Procedure0.java  Procedure1.java  Procedure10.java  Procedure2.java  Procedure3.java  Procedure4.java  Procedure5.java  Procedure6.java  Procedure7.java  Procedure8.java  Procedure9.java
src/main/java/com/wellnr/commons/markup/: Done.java  Either.java  Left.java  Nothing.java  Result.java  Right.java  Tuple.java  Tuple10.java  Tuple2.java  Tuple3.java  Tuple4.java  Tuple5.java  Tuple6.java  Tuple7.java  Tuple8.java  Tuple9.java  When.java
src/main/java/com/wellnr/commons/persistence/: FileSystemRepository.java  WorkspaceEntityFileSystemRepository.java
src/test/java/com/wellnr/commons/: FileOperatorsTest.java
src/test/resources/: sample-document.pages
