[tool.poetry]
name = "wellnr-commons"
version = "0.3.0"
description = "A Java library containing common functions used by multiple projects within the organization."
authors = ["Michael Wellner <michael.wellner@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
commitizen = "^3.13.0"

[tool.commitizen]
name = "cz_conventional_commits"
version = "1.0.1"
version_files = [
    "pom.xml",
    "pyproject.toml:version"
]
update_changelog_on_bump = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
